<resources>
    <string name="app_name">Planeta das Águas - Mobile</string>
    <string name="compre_facil_titulo">COMPRE FÁCIL</string>
    <string name="faca_pedido">FAÇA JÁ O SEU PEDIDO!</string>
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="fornecedores_titulo">FORNECEDORES</string>
    <string name="fornecedores_desc">UMA DISTRIBUIDORA DE SUCESSO NECESSITA DE PARCEIROS FORTES!</string>
    <string name="conheca">CONHEÇA</string>
    <string name="contate_nos">CONTATE-NOS</string>
    <string name="localizacao_desc">CASO NECESSITE DE SUPORTE SAIBA COMO NOS ENCONTRAR</string>
    <string name="localizacao_titulo">LOCALIZAÇÃO E CONTATO</string>
    <string name="quem_somos_titulo">QUEM SOMOS?</string>
    <string name="quem_somos_desc">CONHEÇA A HISTÓRIA DESSA DISTRIBUIDORA DE SUCESSO</string>
    <string name="bonafont_titulo">BONAFONT</string>
    <string name="bonafont_conteudo">Bonafont Água Leve Na correria do dia a dia, o nosso corpo vai acumulando toxinas que o nosso corpo precisa eliminar. Bonafont desce leve e a água ajuda o corpo a eliminar as toxinas que o corpo não precisa.</string>
    <string name="lindoya_titulo">LINDOYA</string>
    <string name="lindoya_conteudo">Uma das primeiras águas minerais a serem comercializadas no país, a água mineral Lindoya Verão vem das mais puras fontes da Serra da Mantiqueira, no interior de São Paulo.</string>
    <string name="ibira_titulo">IBIRÁ</string>
    <string name="ibira_conteudo">Desde 1909 a Água Ibirá é conhecida pelo seu incontestável poder medicinal e como sinônimo de muita saúde. A ÁGUA MINERAL IBIRÁ, pura e cristalina, é cuidadosamente captada do subsolo das Termas de Ibirá, local reconhecido há muitos anos pela ação terapêutica de suas águas minerais.</string>
    <string name="quemsomos_conteudo1">Um grupo de pessoas que já trabalhavam no ramo de distribuição de água porém de terceiros. Dentro desse grupo havia a Carol, que tinha o sonho de ser dona do próprio negócio e assim fundou a distribuidora “Planeta das Águas”. </string>
    <string name="quemsomos_conteudo2">Para assegurar nosso compromisso de qualidade, trabalhamos com as melhores fontes do mercado.</string>
    <string name="quemsomos_conteudo3">A distribuidora Água atua há quase quatro anos, fornecendo água mineral de qualidade. Que mais se adequam ao seu organismo, como Bonafont, Ibira, Lindoya. Sendo uma ágil frota de veículos garantimos a você rapidez da entrega, com o transporte dentro das exigências técnicas e legais. Caso prefira você pode retirar os produtos em nossa loja, app ou site.</string>
    <string name="Localizacao">Localizada em Guarulhos - Emílio Ribas - São Paulo - Jardim Vila Galvao</string>
    <string name="Localizacao2">Para mais informações entre em contato pelos canais de Atendimento</string>
    <string name="Localizacao3">Telefone: (11)96945-4598 </string>
    <string name="Localizacao4">E-mail: planetadasaguadist@gmail.com </string>
    <string name="Localizacao5">A distribuidora Planeta das Águas atua há quase duas décadas, fornecendo água mineral de qualidade.  </string>
    <string name="Localizacao6">Agradeçemos a sua Visita </string>
    <string name="email">EMAIL</string>
    <string name="senha">SENHA</string>
    <string name="login">LOGIN</string>
    <string name="cadastro">Não é Cadastrado? Clique Aqui!</string>
    <string name="product_price">Preço: R$2,50</string>
    <string name="android_pay">Android Pay. Simple way to pay</string>
    <string name="description_example">GARRAFA BONAFONT - 600ML</string>
    <string name="add_to_cart">Adicione ao Carrinho</string>
    <string name="action_cart">Shopping Cart</string>
    <string name="quantity">1</string>
    <string name="product_name">BONAFONT-600ML</string>
    <string name="price">R$ 2,50</string>
    <string name="remove_from_cart">Remover Tudo</string>
</resources>
